openshift/base/active-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: rollouts-demo-active
spec:
  selector:
    app: rollouts-demo
  ports:
  - name: 8080-tcp
    protocol: TCP
    port: 8080
    targetPort: 8080
