openshift/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: rollouts-demo
  labels:
    app: rollouts-demo
spec:
  to:
    kind: Service
    name: rollouts-demo-active
    weight: 100
  port:
    targetPort: 8080-tcp
